SELV3-659: Added PeriodMapping entity
Added PeriodMapping entity class
Added PeriodMappingDto class
Added controller and repository classes for PeriodMapping
Added migration script for period_mapping table
Updated api-definition and required schemas
