# src/main/resources/api-definition.yaml
@@ -26,6 +26,8 @@ schemas:
 - dataElement: !include schemas/dataElement.json
 - dataElementPage: !include schemas/dataElementPage.json
 - dhisDatasetList: !include schemas/dhisDatasetList.json
+- periodMapping: !include schemas/periodMapping.json
+- periodMappingPage: !include schemas/periodMappingPage.json
 
 traits:
 - secured:
@@ -276,6 +278,196 @@ resourceTypes:
             body:
               application/json:
                 schema: localizedErrorResponse
+      /periodMappings:
+        displayName: periodMappings
+        get:
+          is: [ secured, paginated, sorted ]
+          description: Get all period mappings.
+          responses:
+            200:
+              headers:
+                Keep-Alive:
+              body:
+                application/json:
+                  schema: periodMappingPage
+            401:
+              headers:
+                Keep-Alive:
+              body:
+                application/json:
+            403:
+              body:
+                application/json:
+                  schema: localizedErrorResponse
+        post:
+          is: [ secured ]
+          description: Add new period mapping.
+          body:
+            application/json:
+              schema: periodMapping
+          responses:
+            201:
+              headers:
+                Keep-Alive:
+              body:
+                application/json:
+                  schema: periodMapping
+            400:
+              body:
+                application/json:
+                  schema: localizedErrorResponse
+            401:
+              headers:
+                Keep-Alive:
+              body:
+                application/json:
+            403:
+              body:
+                application/json:
+                  schema: localizedErrorResponse
+        /{id}:
+          uriParameters:
+            id:
+              displayName: id
+              type: string
+              required: true
+              repeat: false
+          get:
+            is: [ secured ]
+            description: Get period mapping.
+            responses:
+              200:
+                headers:
+                  Keep-Alive:
+                body:
+                  application/json:
+                    schema: periodMapping
+              404:
+                headers:
+                  Keep-Alive:
+                body:
+                  application/json:
+                    schema: localizedErrorResponse
+              401:
+                headers:
+                  Keep-Alive:
+                body:
+                  application/json:
+              403:
+                body:
+                  application/json:
+                    schema: localizedErrorResponse
+          put:
+            is: [ secured ]
+            description: Change period mapping parameters.
+            body:
+              application/json:
+                schema: periodMapping
+            responses:
+              200:
+                headers:
+                  Keep-Alive:
+                body:
+                  application/json:
+                    schema: periodMapping
+              400:
+                body:
+                  application/json:
+                    schema: localizedErrorResponse
+              401:
+                headers:
+                  Keep-Alive:
+                body:
+                  application/json:
+              403:
+                body:
+                  application/json:
+                    schema: localizedErrorResponse
+              404:
+                body:
+                  application/json:
+                    schema: localizedErrorResponse
+          delete:
+            is: [ secured ]
+            description: Completely removes period mapping. This action is not recoverable.
+            responses:
+              204:
+                headers:
+                  Keep-Alive:
+              400:
+                body:
+                  application/json:
+                    schema: localizedErrorResponse
+              401:
+                headers:
+                  Keep-Alive:
+                body:
+                  application/json:
+              404:
+                headers:
+                  Keep-Alive:
+                body:
+                  application/json:
+                    schema: localizedErrorResponse
+          /auditLog:
+            description: This represents the audit log for all <<resourcePathName|!singularize>> resources.
+            get:
+              description: Returns all or part of the resource's audit log
+              # Although /auditLog endpoints support "page" and "number" query parameters for pagination,
+              # they don’t return the response body and set of pagination-related values expected to be
+              # returned for core domain resources.
+              is: [ paginated ]
+              queryParameters:
+                author:
+                  displayName: author
+                  description: Name of the author of changes which should be returned. By default, all changes are returned regardless of author.
+                  type: string
+                  required: false
+                  repeat: false
+                changedPropertyName:
+                  displayName: changedPropertyName
+                  description: The name of the property about which changes should be returned. If null or empty, changes associated with any and all properties are returned.
+                  type: string
+                  required: false
+                  repeat: false
+              responses:
+                200:
+                  headers:
+                    Keep-Alive:
+                  body:
+                    application/json:
+                      schema: auditLogEntryArray
+                      example: |
+                        [
+                          {
+                            "changeType": "ValueChange",
+                            "globalId": {
+                              "entity": "org.openlmis.SomeClass",
+                              "cdoId": 1
+                            },
+                            "commitMetadata": {
+                              "author": "SomeUserName",
+                              "properties": [],
+                              "commitDate": "2016-12-17T19:39:57.621",
+                              "id": 3
+                            },
+                            "property": "PropertyName",
+                            "left": "OldValue",
+                            "right": "NewValue"
+                          }
+                        ]
+                404:
+                  description: The specified <<resourcePathName|!singularize>> does not exist.
+                  headers:
+                    Keep-Alive:
+                  body:
+                    application/json:
+                      schema: localizedErrorResponse
+                401:
+                  headers:
+                    Keep-Alive:
+                  body:
+                    application/json:
       /datasets:
         displayName: datasets
         get:
@@ -689,6 +881,27 @@ resourceTypes:
               body:
                 application/json:
                   schema: dhisDatasetList
+            401:
+              headers:
+                Keep-Alive:
+              body:
+                application/json:
+            403:
+              body:
+                application/json:
+                  schema: localizedErrorResponse
+      /dhisPeriodTypes:
+        displayName: dhis period types
+        get:
+          is: [ secured ]
+          description: Get all dhis period types.
+          responses:
+            200:
+              headers:
+                Keep-Alive:
+              body:
+                application/json:
+                  schema: dhisPeriodTypeList
             401:
               headers:
                 Keep-Alive:
